move strings to commmon file and make more generic

--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -129,6 +129,11 @@
   "aiTrainedModelsDeleteModelMessage": "This model will be permanently deleted, and you will not be able to use this model in any App Lab projects.",
   "aiTrainedModelsDeleteModelFailed": "Model with id {id} could not be deleted.",
   "aiTutor": "AI Tutor",
+  "aiWarningModalHeader": "Remember to chat responsibly!",
+  "aiWarningModalInappropriateFlagged": "Inappropriate messages will be flagged and your teacher will be notified.",
+  "aiWarningModalMessagesAreRecorded": "All messages you send are recorded.",
+  "aiWarningModalPersonalNotSubmitted": "In order to protect your privacy, anything considered personal information (name, phone number, address, etc.) should not be submitted.",
+  "aiWarningModalOk": "Start chatting",
   "all": "All",
   "allHandouts": "All Handouts",
   "allowEditing": "Allow editing",
