--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -872,6 +872,8 @@
   "deleteGroup": "Delete group",
   "deleteTable": "Delete table",
   "deleteTableConfirm": "Do you really want to delete this entire table? You cannot undo this action.",
+  "deleteParameter": "Delete paramater...",
+  "deleteParameterTitle": "This will delete all {parameterName} parameter occurrences. Are you sure?",
   "deleteProject": "Delete Project",
   "deleteProjectConfirm": "Do you really want to delete your project? You cannot undo this action.",
   "deleteSection": "Delete Section",
@@ -2267,6 +2269,8 @@
   "rename": "Rename",
   "renameAll": "Rename all {variableName}",
   "renameAllPromptTitle": "Rename all {variableName} variables to:",
+  "renameParameter": "Rename paramater...",
+  "renameParameterPromptTitle": "Rename all {parameterName} parameters to:",
   "renameThis": "Rename this variable",
   "renameThisPromptTitle": "New variable name:",
   "repeat": "repeat",
