add new parameter button

--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -1801,6 +1801,7 @@
   "newAnimation": "new animation",
   "newBackground": "New Background",
   "newCostume": "New Costume",
+  "newParameterTitle": "New parameter name:",
   "newPassword": "new password",
   "newSection": "New section",
   "newSectionUpdated": "Create a new section",
@@ -1901,6 +1902,7 @@
   "pairProgrammingChosePartners": "Choose partners:",
   "pairProgrammingStop": "Stop Pair Programming",
   "pairProgrammingWith": "You are Pair Programming with:",
+  "parameters": "Parameters",
   "parametersHeader": "Parameters",
   "parent": "Parent",
   "parents": "Parents",
