Add a banner to toolbox block editing

--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -1383,6 +1383,7 @@
   "inProgress": "In progress",
   "inProgressAndUpcomingWorkshops": "In Progress and Upcoming Workshops",
   "inStartBlocksMode": "You are editing start blocks.",
+  "inToolboxBlocksMode": "You are editing toolbox blocks.",
   "inspireStudents": "Inspire students",
   "instructionalLesson": "Instructional Lesson",
   "instructionalMinutesPerWeek": "Instructional minutes per week",
