change save feature

--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -2360,6 +2360,7 @@
   "saveAndClose": "Save and close",
   "saveAndPublish": "Save & Publish",
   "saveAndShare": "Save and share",
+  "saveAndViewUrl": "Save and view URL",
   "savedToGallery": "Saved",
   "saving": "Saving...",
   "scanQRCode": "Scan this code with your phone camera:",
