--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -872,7 +872,7 @@
   "deleteGroup": "Delete group",
   "deleteTable": "Delete table",
   "deleteTableConfirm": "Do you really want to delete this entire table? You cannot undo this action.",
-  "deleteParameter": "Delete paramater...",
+  "deleteParameter": "Delete parameter...",
   "deleteParameterTitle": "This will delete all {parameterName} parameter occurrences. Are you sure?",
   "deleteProject": "Delete Project",
   "deleteProjectConfirm": "Do you really want to delete your project? You cannot undo this action.",
@@ -1804,6 +1804,7 @@
   "newAnimation": "new animation",
   "newBackground": "New Background",
   "newCostume": "New Costume",
+  "newParameterTitle": "New parameter name:",
   "newPassword": "new password",
   "newSection": "New section",
   "newSectionUpdated": "Create a new section",
@@ -1904,6 +1905,7 @@
   "pairProgrammingChosePartners": "Choose partners:",
   "pairProgrammingStop": "Stop Pair Programming",
   "pairProgrammingWith": "You are Pair Programming with:",
+  "parameters": "Parameters",
   "parametersHeader": "Parameters",
   "parent": "Parent",
   "parents": "Parents",
@@ -2272,7 +2274,7 @@
   "rename": "Rename",
   "renameAll": "Rename all {variableName}",
   "renameAllPromptTitle": "Rename all {variableName} variables to:",
-  "renameParameter": "Rename paramater...",
+  "renameParameter": "Rename parameter...",
   "renameParameterPromptTitle": "Rename all {parameterName} parameters to:",
   "renameThis": "Rename this variable",
   "renameThisPromptTitle": "New variable name:",
