--- a/dashboard/config/locales/restricted.en.yml
+++ b/dashboard/config/locales/restricted.en.yml
@@ -13,6 +13,6 @@ en:
         associated_account_password_wont_change: "Passwords will not change until you access the corresponding link above and create a new one."
       unlock_instructions:
         hello: "Hello %{user_email}!"
-        why_account_locked: "Your account has been locked due to an excessive number of unsuccessful sign in attempts."
-        call_to_action: "Click the link below to unlock your account:"
-        unlock_link_text: "Unlock my account"
+        why_account_locked: "Your account has been temporarily locked due to an excessive number of unsuccessful sign in attempts."
+        call_to_action: "Your account will be automatically unlocked within %{unlock_time}, or you can click the link below to unlock your account immediately."
+        unlock_link_text: "Unlock my account:"
