--- a/i18n/locales/source/dashboard/marketing_announcements.json
+++ b/i18n/locales/source/dashboard/marketing_announcements.json
@@ -16,6 +16,8 @@
       "buttonText": "Learn more"
     },
     "lms-launch": {
+      "title": "Discover our new LMS integrations",
+      "body": "We've added new LMS integrations for Canvas and Schoology! Connect existing LMS classrooms in your school to Code.org with one-click Roster Syncing, Single Sign-On, and integrated access to curriculum.",
       "buttonText": "Learn more"
     }
   }
