--- a/i18n/locales/source/course_content/other/allthethings.json
+++ b/i18n/locales/source/course_content/other/allthethings.json
@@ -2933,7 +2933,7 @@
     "teacher_markdown": "Teachers should see this extra info."
   },
   "https://studio.code.org/s/allthethings/lessons/50/levels/2": {
-    "long_instructions": "## Python Lab Basics\n\nTry adding some new code."
+    "long_instructions": "## Python Lab with Validation\n\nThis level has some built-in validation code."
   },
   "https://studio.code.org/s/allthethings/lessons/50/levels/3": {
     "long_instructions": "## Project-backed level\n\nThis level shares a project with level 4 in the progression."
