extract shared UserMessageEditor component

--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -129,6 +129,7 @@
   "aiTrainedModelsDeleteModelMessage": "This model will be permanently deleted, and you will not be able to use this model in any App Lab projects.",
   "aiTrainedModelsDeleteModelFailed": "Model with id {id} could not be deleted.",
   "aiTutor": "AI Tutor",
+  "aiUserMessagePlaceholder": "Add a chat message...",
   "aiWarningModalHeader": "Remember to chat responsibly!",
   "aiWarningModalInappropriateFlagged": "Inappropriate messages will be flagged and your teacher will be notified.",
   "aiWarningModalMessagesAreRecorded": "All messages you send are recorded.",
