--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -1365,6 +1365,7 @@
   "imageURLInputInvalid": "Please provide a valid URL.",
   "imageURLInputDescription": "Don't have a file downloaded? Provide the link to an image on the web. This works for URLs that end with *.GIF*, *.PNG*, or *.JPG*.",
   "imageURLInputPrompt": "Image URL:",
+  "imageURL": "Image URL: ",
   "import": "Import",
   "importCSV": "Import csv",
   "importingWithEllipsis": "Importing...",
@@ -2372,6 +2373,7 @@
   "saveAndClose": "Save and close",
   "saveAndPublish": "Save & Publish",
   "saveAndShare": "Save and share",
+  "saveAndViewUrl": "Save and view URL",
   "savedToGallery": "Saved",
   "saving": "Saving...",
   "scanQRCode": "Scan this code with your phone camera:",
@@ -2880,6 +2882,7 @@
   "upgradeAccountToAssign": "Use a teacher account to assign a curriculum",
   "upgradeAccountToAssignButtonText": "Learn how to update account type",
   "upgradeAccountToAssignHelpText": "You need a teacher account to assign a curriculum. Please switch to a teacher account or update your account type.",
+  "uploadImage": "Upload Image",
   "useCursorType": "Use {type} cursor",
   "usingCursorType": "Using {type} cursor",
   "useAiFeatures": "Use AI features",
