--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -1982,6 +1982,9 @@
   "playzoneProjectsDescription": "Revisit one of your existing projects.",
   "playzoneProjectsTitle": "Open a Project",
   "playzoneSecondaryHeader": "Ask your teacher what to do next",
+  "plLandingCurriculumLaunchBannerSubHeading": "Introducing new professional learning!",
+  "plLandingCurriculumLaunchBannerDescription": "Explore new self-paced online modules that will empower you to teach the newest additions to our curriculum.",
+  "plLandingCurriculumLaunchBannerButtonText": "Start here!",
   "plLandingDescription": "Thank you for completing a {course} workshop. Please complete this survey about your experience to help us improve future professional development workshops!",
   "plLandingSubheading": "Submit your feedback",
   "plLandingStartSurvey": "Start survey",
