--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -416,6 +416,7 @@
   "childAccountConsentValidPermissionGranted": "Granted on {date}",
   "childAccountConsentValidMessage": "Thank you for approving your child’s Code.org account! You will receive a confirmation email within 24–48 hours. Please let your child know you’ve approved their account so they can get started learning and coding today!",
   "childAccountPolicy_consentStatus": "Consent Status",
+  "childAccountPolicy_parentEmailed": "Parent/Guardian Emailed?",
   "childAccountPolicy_consentProcessReadMore": "Read more about this consent process and these changes here.",
   "childAccountPolicy_gracePeriod": "Grace Period",
   "childAccountPolicy_lockedOut": "Locked Out",
