--- a/dashboard/config/locales/en.yml
+++ b/dashboard/config/locales/en.yml
@@ -1427,7 +1427,9 @@ en:
       connect_button: "Connect with %{provider}"
       connect_with: "Connect with..."
       connect_with_email: "Connect with personal login"
+      backend_error: "Oops! We encountered an error while trying to link your account. Please try launching Code.org again from your LMS."
       go_back: "Go back"
+      invalid_credentials: "Invalid credentials"
       linking_page_header: "Link your %{provider} account to your existing Code.org account"
       linking_page_description: "Choose the sign-in method you normally use to access Code.org"
       sign_in_and_connect: "Sign in and connect"
