move string and fix typo

--- a/pegasus/sites.v3/hourofcode.com/i18n/en.yml
+++ b/pegasus/sites.v3/hourofcode.com/i18n/en.yml
@@ -1581,7 +1581,6 @@
   csf_page_intro_list_02: "Equitable introductory CS courses"
   csf_page_intro_list_03: "Use the same course for all students in the same grade, regardless of their experience"
   csf_page_intro_list_04: "All courses make suitable entry points for students"
-  csf_page_intro_list_05: "Aligned to K-5 CSTA curriculum standards"
   csf_page_quote: "I've been teaching the course since the Monday after the workshop. The students and I LOVE it (and so do their classroom teachers!!!)"
   csf_page_curriculum_glance_topics: "Programming, Internet, Games and Animation, Art and Design, App Design"
   csf_page_curriculum_glance_devices: "Laptop, Chromebook, Tablet"
@@ -1615,12 +1614,13 @@
   csf_page_faq_question_06: "What materials do I need for CS Fundamentals?"
   csf_page_faq_answer_06: "Many lessons have handouts that guide students through activities. These resources can be printed or assigned digitally. Some lessons call for typical classroom supplies and manipulatives. [Visit the CSF Syllabus to learn more](%{syllabus_url})."
   csf_page:
+    intro_list_05: "Aligned to K-5 CSTA curriculum standards"
     additional_resources:
       heading: "Additional resources"
       desc: "Beyond curriculum and professional learning, we have many materials to support your classroom."
       catalog:
         title: "Curriculum Catalog"
-        desc: "Comprehensive curriculum offerings for every grade and experience level featuring robust structured and self-paced learning options."
+        desc: "Comprehensive curriculum offerings for every grade and experience level featuring robust, structured, and self-paced learning options."
         button: "Explore the catalog"
       videos:
         title: "Explore Videos"
