--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -1983,6 +1983,7 @@
   "plLandingCurriculumLaunchBannerSubHeading": "Introducing new professional learning!",
   "plLandingCurriculumLaunchBannerDescription": "Explore new self-paced online modules that will empower you to teach the newest additions to our curriculum.",
   "plLandingCurriculumLaunchBannerButtonText": "Start here!",
+  "plLandingCurriculumLaunchBannerButtonAriaLabel": "Start exporing the new self-paced online modules",
   "plLandingDescription": "Thank you for completing a {course} workshop. Please complete this survey about your experience to help us improve future professional development workshops!",
   "plLandingSubheading": "Submit your feedback",
   "plLandingStartSurvey": "Start survey",
