--- a/pegasus/sites.v3/hourofcode.com/i18n/en.yml
+++ b/pegasus/sites.v3/hourofcode.com/i18n/en.yml
@@ -733,6 +733,7 @@
   module_duration_2_hrs_30_minutes: "2.5 hours"
   module_duration_3_hrs: "3 hours"
   module_duration_3_hrs_20_minutes: "3 hours 20 minutes"
+  module_duration_4_hrs_30_mins: "4.5 hours"
   module_duration_5_hrs: "5 hours"
   module_duration_5_hrs_plus: "5+ hours"
   module_duration_8_hrs: "8 hours"
