--- a/pegasus/sites.v3/hourofcode.com/i18n/en.yml
+++ b/pegasus/sites.v3/hourofcode.com/i18n/en.yml
@@ -594,7 +594,7 @@
   curriculum_name_maker: "Maker"
   curriculum_name_maker_cp: "Creating Apps with Devices (Circuit Playground)"
   curriculum_name_maker_microbit: "Creating Apps with Devices (micro:bit)"
-  curriculum_name_microbit_maker_modules: "micro:bit Maker modules" 
+  curriculum_name_microbit_maker_modules: "micro:bit Maker modules"
   curriculum_name_creating_apps_with_devices: "Creating Apps with Devices"
   curriculum_name_poetry: "Coding with Poetry"
   curriculum_name_dance_party: "Dance Party"
@@ -720,7 +720,7 @@
   module_grade_2_5_teachers: "2-5 Teachers"
   module_grade_3_5_teachers: "3-5 Teachers"
   module_grade_6_10_teachers: "6-10 Teachers"
-  module_grade_6_12_teachers: "6-12 Teachers" 
+  module_grade_6_12_teachers: "6-12 Teachers"
   module_grade_9_12_teachers: "9-12 Teachers"
   module_level_beginner: "Beginner"
   module_level_intermediate: "Intermediate"
@@ -2320,24 +2320,28 @@
         desc: "Dive into game development with our 5-hour Game Design module, teaching students to create games using Sprite Lab while mastering key concepts and culminating in a Game Jam showcase."
         duration: "5 hours"
         button: "Explore unit"
+        aria_label: "Explore the Elementary Game Design unit"
       sports:
         overline: "Grades 2-12"
         title: "Code Your Own Sports Game"
         desc: "Score big with a sports game coded by you! Learn all about events in programming, work through puzzles, and customize the fun. Let's play and code like champs!"
         duration: "1 hour"
         button: "Try activity"
+        aria_label: "Try the Code Your Own Sports Game activity"
       flappy:
         overline: "Grades 2-12"
         title: "Flappy Code"
         desc: "Create a game using basic block code in this introductory computer science activity."
         duration: "1 hour"
         button: "Try activity"
+        aria_label: "Try the Flappy Code activity"
       basketball:
         overline: "Grades 2-12"
         title: "Choose Your Team and Make a Basketball Game"
         desc: "Learn what \"events\" are and how computers use them in programs like video games! Students work through puzzles and customize their games with speed and sound."
         duration: "1 hour"
         button: "Try activity"
+        aria_label: "Try the Choose Your Team and Make a Basketball Game activity"
     mid_high_curricula:
       heading: "Middle and high school game design curricula"
       interactive:
@@ -2346,18 +2350,21 @@
         desc: "Engaging the same design process that computer scientists use, students learn programming concepts and develop images, animations, interactive art, and games."
         duration: "3 hours, 20 minutes"
         button: "Explore unit"
+        aria_label: "Explore the Interactive Animations and Games unit"
       game_lab:
         overline: "Grades 6-12"
         title: "Self-Paced Introduction to Game Lab"
         desc: "Move at your own pace in this introduction to our Game Lab environment as you program animations, interactive art, and games."
         duration: "Month"
         button: "Explore unit"
+        aria_label: "Explore the Self-Paced Introduction to Game Lab unit"
       star_wars:
         overline: "Grades 6-12"
         title: "Star Wars: Building a Galaxy With Code (JavaScript)"
         desc: "Use JavaScript to learn to program droids, and create your own Star Wars game in a galaxy far, far away."
         duration: "1 hour"
         button: "Try activity"
+        aria_label: "Try the Star Wars: Building a Galaxy With Code activity"
     quote:
       text: "This curriculum is all inclusive, well organized, and student centered! The incredible organization in the curriculum is what makes me use it year after year."
       byline: "AP® CSA Teacher"
@@ -2369,11 +2376,13 @@
         title: "Teaching Elementary Game Design"
         desc: "Prepare to teach Code.org's game design module, where students explore game design through engaging activities, exploring concepts, and collaboratively building games."
         button: "Start professional learning"
+        aria_label: "Start the Teaching Elementary Game Design professional learning course"
       interactive:
         overline: "6-12 Teachers"
         title: "Teaching Interactive Animations and Games"
         desc: "Prepare to teach Code.org's CSD Unit 3 - Interactive Animations and Games, allowing you to engage with the content at your own pace and in the order that best suits your needs."
         button: "Start professional learning"
+        aria_label: "Start the Teaching Interactive Animations and Games professional learning course"
     additional_resources:
       heading: "Additional resources"
       desc: "Beyond curriculum and professional learning, we have many materials to support your classroom."
