CPA Account Settings Locks and Polish (#58343)
* Adds visual locking and disabling of settings content based on CPA policies.

* Adds some end-to-end UI tests for CPA account settings.

* Updates ManageLinkedAccounts unit tests.

* Fixes UI tests by setting experiment values appropriately.

This required a small out-of-the-way change to the CPA policy code to
ensure that the experiment value is a Hash when it is supplied by the
request.

* Fixes typo.

* Slight clean-up refactor.

* Cleans up portions of ManageLinkedAccount and updates UI tests for new CPA experiment values.

* Fixes experiment values in UI tests.

* Updates to also partially lockout users that predate the policy.

* Removes unused test controller route.

* Refactors out the policy functions and writes their unit tests.

Updates UI tests.

* Updates unit tests for Policies::ChildAccount

* Readds Artem's omniauth controller changes to block linking LTI.

* Redirects back when it fails to link accounts.

* Adds ability to add/update state in account settings.

We need to lock it once they pick a state that 'locks', but that will be
done later.

Re-enables select UI tests and adds some to reflect these changes.

* Remove selenium url change.

* Update i18n test helper to strip whitespace on both sides.

* Updates lockout panel header and description for the account settings page.

* Updates to show 'granted' permission in account settings and updates prompt in that case.

* Fixes change to the location of latest_permission_request.

* Fixes linting errors that got through via rebasing and fixes regression.

* Removes test for a function that no longer exists due to rebase.

* Updates underage to also detect that the current age surpasses max_age.

* Fixes odd linting error.

--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -1548,8 +1548,9 @@
   "lockFollowing": "Lock the following lessons that are currently unlocked:",
   "lockAssessment": "Lock assessment",
   "lockAssessmentLong": "Lock assessment when students finish using the \"Lock Settings\" button.",
-  "lockoutManageLinkedAccountsPrompt": "Our records indicate that your account requires parental permission to use a personal login and password. Please supply your parent's details below.",
-  "lockoutManageLinkedAccountsHeader": "Edit Personal Login Parent Permission",
+  "lockoutManageLinkedAccountsPrompt": "Our records indicate that your account requires parent or guardian permission to use a personal login and password. Please supply your parent or guardian's details below.",
+  "lockoutManageLinkedAccountsGrantedPrompt": "Our records indicate that your account requires parent or guardian permission to use a personal login and password.",
+  "lockoutManageLinkedAccountsHeader": "Parent or Guardian Permission",
   "lockSettings": "Lock Settings",
   "lockStage": "Lock lesson",
   "lockStageInstructions": "Once time is up, \"Lock lesson\" to hide questions.",
@@ -1718,6 +1719,8 @@
   "manageLinkedAccounts": "Manage Linked Accounts",
   "manageLinkedAccounts_actions": "Actions",
   "manageLinkedAccounts_noLoginTooltip": "To make sure you can still sign in to your account, please add a password or another linked account first.",
+  "manageLinkedAccounts_stateRequired": "Uh oh! Please provide your state before adding a linked account.",
+  "manageLinkedAccounts_parentalPermissionRequired": "Uh oh! You must obtain parental permission before creating a linked account.",
   "manageLinkedAccounts_clever": "Clever Account",
   "manageLinkedAccounts_connect": "Connect",
   "manageLinkedAccounts_disconnect": "Disconnect",
